# Qt-Canvas

./: CMakeLists.txt  CONVENTION.md  main.cpp
event/: CMakeLists.txt  Event.cpp  Event.h  EventDef.h  EventMediator.cpp
model/: CMakeLists.txt
model/Signal/: Signal.cpp  Signal.h  SignalDef.h
script/: format-cmake.sh  format-qml.sh  format.sh
ui/: CMakeLists.txt  LeftPane.qml  Main.qml  RightPane.qml  resource.qrc
ui/LeftPane/: LeftPane.qml
ui/RightPane/: CustomGroupBox.qml  CustomLine.qml  RightPane.qml
viewmodel/: CMakeLists.txt
viewmodel/ConfigureViewModel/: ConfigureViewModel.cpp  ConfigureViewModel.h
